# openground

./: .gitignore  README.md  README_INFO_COLLECTION.md  pyproject.toml
.claude/agents/: openground-docs-search.md
.cursor/commands/: change-summary.md
.cursor/rules/: overview.mdc
.github/workflows/: pypi_deploy.yml
.openground/: sources.json
docs/: claude-code-agent.md  mkdocs.yml
docs/docs/: configuration.md  embedding-backends.md  getting-started.md  index.md  mcp-integration.md
docs/docs/commands/: add.md  config.md  embed.md  extract-git.md  extract.md  index.md  ingest.md  list-libraries.md  nuke.md  query.md  remove-library.md
openground/: cli.py  config.py  console.py  embeddings.py  extract.py  git.py  ingest.py  query.py  server.py  sources.json  stats.py
openground/extract/: common.py  git.py  local_path.py  sitemap.py  source.py
openground/extract/tests/: test_source.py
openground/tests/: conftest.py  test_cli.py  test_isolation.py  test_update.py
src/: cli.py  config.py  extract.py  ingest.py  query.py  server.py
