[project]
name = "openground"
version = "0.1.0"
description = "Ingest official documentation into a local vector database and expose it via MCP for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "mcp",
    "documentation",
    "vector-database",
    "embeddings",
    "ai",
    "coding-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp",
    "pydantic",
    "trafilatura",
    "typer",
    "lancedb",
    "sentence-transformers",
    "torch",
    "langchain-text-splitters",
    "lance>=1.2.1",
    "tqdm",
    "fastmcp>=2.13.3",
    "pandas>=2.3.3",
]

[project.urls]
Homepage = "https://github.com/poweroutlet2/openground"
Repository = "https://github.com/poweroutlet2/openground"
Issues = "https://github.com/poweroutlet2/openground/issues"

[project.scripts]
openground = "openground.cli:app"
openground-mcp = "openground.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openground"]

[dependency-groups]
dev = ["ipynb", "jupyter", "ruff>=0.14.8"]
